Fixed image bound after only testing on mobile. Whoops

--- a/style.css
+++ b/style.css
@@ -100,12 +100,11 @@ header{
 
 #headshot{
     text-align: center;
-    max-width: 100%;
     padding: 1em;
 }
 
 #headshot img{
-    max-width: 100%;
+    max-width: 250px;
 }
 
 .button{
